tests/ast_interpreter/err_var_undeclared_use.expected
<string>:2:5: error: undeclared variable "y"
x + y;
    ^